# Gamepad-Core

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  ClangFormat.sh  README.md
.github/workflows/: build.yml  codeql.yml
Examples/Adapters/Godot/: godot-registry-polucy.h.txt  manager-cpp.txt
Examples/Adapters/Tests/: Test_DeviceRegistryPolicy.h  test_device_registry_policy.h
Examples/Adapters/Unreal/: device-registry-policy.h.txt
Examples/Apps/: CMakeLists.txt  DualSenseMods.cpp
Examples/Gamings/: gaming-mods.cpp
Examples/Platform_Linux/: test_linux_device_info.cpp  test_linux_device_info.h  test_linux_hardware_policy.h
Examples/Platform_Windows/: WindowsDeviceInfo.cpp  WindowsHardwarePolicy.h  test_windows_device_info.cpp  test_windows_device_info.h  test_windows_hardware_policy.h
Examples/Platform_Windows/ViGEmAdapter/: ViGEmAdapter.cpp  ViGEmAdapter.h
Source/: CMakeLists.txt
Source/Private/GCore/Algorithms/: MadgwickAhrs.cpp
Source/Private/GCore/Interfaces/: IPlatformHardwareInfo.cpp
Source/Private/GImplementations/Libraries/Base/: SonyGamepadAbstract.cpp
Source/Private/GImplementations/Libraries/DualSense/: DualSenseLibrary.cpp
Source/Private/GImplementations/Libraries/DualShock/: DualShockLibrary.cpp
Source/Private/GImplementations/Utils/: GamepadOutput.cpp
Source/Private/GImplementations/Utils/MiniAudio/: miniaudio_impl.cpp
Source/Public/GCore/Algorithms/: MadgwickAhrs.h
Source/Public/GCore/Interfaces/: IPlatformHardwareInfo.h
Source/Public/GCore/Interfaces/Segregations/: IGamepadAudioHaptics.h
Source/Public/GCore/Templates/: TBasicDeviceRegistry.h  TGenericHardwareInfo.h
Source/Public/GCore/Types/: DSCoreTypes.h  ECoreGamepad.h
Source/Public/GCore/Types/Structs/Config/: GamepadAudio.h  GamepadFeature.h  GamepadSensors.h
Source/Public/GCore/Types/Structs/Context/: AudioContext.h  DeviceContext.h  InputContext.h  OutputContext.h
Source/Public/GImplementations/Libraries/Base/: SonyGamepadAbstract.h
Source/Public/GImplementations/Libraries/DualSense/: DualSenseLibrary.h
Source/Public/GImplementations/Libraries/DualShock/: DualShockLibrary.h
Source/Public/GImplementations/Utils/: GamepadAudio.h  GamepadInput.h  GamepadOutput.h  GamepadSensors.h  GamepadTouch.h  GamepadTrigger.h
Source/Public/Libs/: .clang-format
Tests/Integration/: CMakeLists.txt  audio-haptics.test.cpp  main.cpp  main.test.cpp
Tests/Integration/Features/: adaptive-triggers.test.cpp  audio-haptics.test.cpp  gamepad-analog.test.cpp  test-audio-haptics.cpp  test-channels-haptics.cpp
Tests/Integration/Features/dll/: app-dll-scope-haptics.test.cpp  app-dll-scope-input.test.cpp
